--- a/src/css/style.css
+++ b/src/css/style.css
@@ -522,6 +522,14 @@ video {
   visibility: hidden;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -577,6 +585,10 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mt-64 {
+  margin-top: 16rem;
+}
+
 .mb-96 {
   margin-bottom: 24rem;
 }
@@ -589,8 +601,16 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
 }
 
 .h-96 {
@@ -607,6 +627,10 @@ video {
 
 .h-4 {
   height: 1rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-\[200px\] {
@@ -641,12 +665,32 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-center {
   justify-content: center;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.self-end {
+  align-self: flex-end;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-scroll {
@@ -667,6 +711,10 @@ video {
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border {
@@ -707,8 +755,65 @@ video {
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-\[url\(\'\/img\/1\.jpg\'\)\] {
+  background-image: url('/img/1.jpg');
+}
+
+.bg-\[url\(\'\.\/img\/1\.jpg\'\)\] {
+  background-image: url('./img/1.jpg');
+}
+
+.bg-\[url\(\'img\/1\.jpg\'\)\] {
+  background-image: url('img/1.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/1\.jpg\'\)\] {
+  background-image: url('../img/1.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/2\.jpg\'\)\] {
+  background-image: url('../img/2.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/3\.jpg\'\)\] {
+  background-image: url('../img/3.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/4\.jpg\'\)\] {
+  background-image: url('../img/4.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/5\.jpg\'\)\] {
+  background-image: url('../img/5.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/6\.jpg\'\)\] {
+  background-image: url('../img/6.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/7\.jpg\'\)\] {
+  background-image: url('../img/7.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/8\.jpg\'\)\] {
+  background-image: url('../img/8.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/9\.jpg\'\)\] {
+  background-image: url('../img/9.jpg');
+}
+
+.bg-\[url\(\'\.\.\/img\/10\.jpg\'\)\] {
+  background-image: url('../img/10.jpg');
 }
 
 .from-cyan-500 {
@@ -723,6 +828,10 @@ video {
 
 .bg-contain {
   background-size: contain;
+}
+
+.bg-cover {
+  background-size: cover;
 }
 
 .bg-scroll {
@@ -748,6 +857,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-5 {
@@ -887,6 +1000,16 @@ video {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .first-letter\:float-left::first-letter {
   float: left;
 }
@@ -984,6 +1107,12 @@ video {
   color: rgb(190 24 93 / var(--tw-text-opacity));
 }
 
+.hover\:scale-95:hover {
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:bg-sky-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -1039,6 +1168,17 @@ video {
 .active\:bg-sky-700:active {
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:rotate-12 {
+  --tw-rotate: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group:hover .group-hover\:text-white {
@@ -1108,4 +1248,44 @@ video {
 .dark .group:hover .dark\:group-hover\:text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:col-start-4 {
+    grid-column-start: 4;
+  }
+
+  .md\:col-start-2 {
+    grid-column-start: 2;
+  }
+
+  .md\:col-start-3 {
+    grid-column-start: 3;
+  }
+
+  .md\:row-start-2 {
+    grid-row-start: 2;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:aspect-\[3\/4\] {
+    aspect-ratio: 3/4;
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:p-4 {
+    padding: 1rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:aspect-\[4\/3\] {
+    aspect-ratio: 4/3;
+  }
 }
